--- a/package.json
+++ b/package.json
@@ -3,28 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
-    "@mui/material": "^5.10.3",
-    "@testing-library/dom": "^8.16.0",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^0.27.2",
-    "bootstrap": "^5.2.0",
-    "nth-check": "^2.1.1",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-material-ui-carousel": "^3.4.2",
-    "react-redux": "^8.0.2",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "^5.0.1",
-    "redux": "^4.2.0",
-    "redux-devtools-extension": "^2.13.9",
-    "redux-mock-store": "^1.5.4",
-    "redux-thunk": "^2.4.1",
-    "sass": "^1.54.1",
-    "web-vitals": "^2.1.4"
+    "@emotion/react": "11.10.4",
+    "@emotion/styled": "11.10.4",
+    "@mui/material": "5.10.3",
+    "@testing-library/dom": "8.16.0",
+    "@testing-library/jest-dom": "5.16.4",
+    "@testing-library/react": "13.3.0",
+    "@testing-library/user-event": "13.5.0",
+    "axios": "0.27.2",
+    "bootstrap": "5.2.0",
+    "nth-check": "2.1.1",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "react-material-ui-carousel": "3.4.2",
+    "react-redux": "8.0.2",
+    "react-router-dom": "6.3.0",
+    "react-scripts": "5.0.1",
+    "redux": "4.2.0",
+    "redux-devtools-extension": "2.13.9",
+    "redux-mock-store": "1.5.4",
+    "redux-thunk": "2.4.1",
+    "sass": "1.54.1",
+    "web-vitals": "2.1.4"
   },
   "overrides": {
     "react-material-ui-carousel": {
@@ -59,5 +59,6 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^6.3.1"
-  }
+  },
+  "packageManager": "pnpm@10.6.5+sha512.cdf928fca20832cd59ec53826492b7dc25dc524d4370b6b4adbf65803d32efaa6c1c88147c0ae4e8d579a6c9eec715757b50d4fa35eea179d868eada4ed043af"
 }
