--- a/package.json
+++ b/package.json
@@ -1,63 +1,45 @@
 {
-  "name": "proyecto-react-starwars",
-  "version": "0.1.0",
+  "name": "react-starwars-v2",
   "private": true,
-  "dependencies": {
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
-    "@mui/material": "^5.10.3",
-    "@testing-library/dom": "^8.16.0",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^0.27.2",
-    "bootstrap": "^5.2.0",
-    "nth-check": "^2.1.1",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-material-ui-carousel": "^3.4.2",
-    "react-redux": "^8.0.2",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "^5.0.1",
-    "redux": "^4.2.0",
-    "redux-devtools-extension": "^2.13.9",
-    "redux-mock-store": "^1.5.4",
-    "redux-thunk": "^2.4.1",
-    "sass": "^1.54.1",
-    "web-vitals": "^2.1.4"
-  },
-  "overrides": {
-    "react-material-ui-carousel": {
-      "react": "^18.0.0",
-      "react-dom": "^18.0.0"
-    },
-    "@svgr/webpack": "$@svgr/webpack"
-  },
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "dependencies": {
+    "@emotion/react": "11.14.0",
+    "@emotion/styled": "11.14.0",
+    "@mui/material": "7.0.0",
+    "@reduxjs/toolkit": "2.6.1",
+    "axios": "1.8.4",
+    "bootstrap": "5.3.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-material-ui-carousel": "3.4.2",
+    "react-redux": "9.2.0",
+    "react-router": "7.4.0"
   },
   "devDependencies": {
-    "@svgr/webpack": "^6.3.1"
+    "@eslint/js": "^9.21.0",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/react": "^16.2.0",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "@vitejs/plugin-react-swc": "^3.8.0",
+    "eslint": "^9.21.0",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "globals": "^15.15.0",
+    "vite": "^6.2.0"
+  },
+  "packageManager": "pnpm@10.6.5+sha512.cdf928fca20832cd59ec53826492b7dc25dc524d4370b6b4adbf65803d32efaa6c1c88147c0ae4e8d579a6c9eec715757b50d4fa35eea179d868eada4ed043af",
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@swc/core",
+      "esbuild"
+    ]
   }
 }
